# jbpy

./: .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: pypi.yml  test.yml
docs/: .gitignore  make.py  zensical.toml
examples/: README.md  extract_nitf_image.py
jbpy/: _jbpinfo.py  core.py  image_data.py
jbpy/extensions/tre/: BLOCKA.py  EXOPTA.py  SECTGA.py  STDIDC.py  __init__.py  _core.py
pybiif/: __init__.py  core.py
pybiif/extensions/tre/: SECTGA.py
test/: test_core.py  test_image_data.py  test_jbpy.py  test_nitf_io.py  test_pybiif.py  test_sectga.py
test/tre/: test_stdidc.py  test_tre.py
